--- a/RASD/introduction.tex
+++ b/RASD/introduction.tex
@@ -10,34 +10,27 @@ This document is written for project managers, developers, testers and systems a
 
 \subsection{Scope}
 
-PowerEnJoy is a digital management system for a car-sharing service that exclusively employs electric vehicles. This car rental system provides an alternative solution to public transport, thus being not only eco-friendly, but also simple and reliable.
+PowerEnJoy is a digital management system for a car-sharing service that exclusively employs electric car. This car rental system provides an alternative solution to public transport, thus being not only eco-friendly, but also simple and reliable.
 
 The service is available to whomever has a valid driving license. Anybody who wants to register must provide a copy of it, along with his credentials and payment informations.
-Once registered, they will be allowed to search a vehicle in a specific area, and reserve one for up to an hour before picking it up. The system will cancel the reservation in case of them failing to arrive to the vehicle in time, will make that specific vehicle available again and apply a fine to the driver.
-Upon arrival to the vehicle, the driver will be able to get inside and drive it, at the cost of a per-minute fee of which he will be notified by the system through a screen on the vehicle itself; this until the vehicle will be left parked in a safe area, where the system will close the doors and make the vehicle available again.
+Once registered, they will be allowed to search a car in a specific area, and reserve one for up to an hour before picking it up. The system will cancel the reservation in case of them failing to arrive to the car in time, will make that specific car available again and apply a fine to the driver.
 
-A support team is provided by the service in case of incidents, vehicle failures and other cases of need.
+Upon arrival to the car, the driver will be able to get inside and drive it, at the cost of a per-minute fee of which he will be notified by the system through a screen on the car itself; this until the car will be left parked in a safe area, where the system will close the doors and make the car available again.
 
-\subsection{Actors}
-\begin{itemize}
-	\item Guest: anyone not recognized by the system who can sign up or log in to it. He/She may look for informations about the service.
-	\item Driver: a user subscribed to the system.
-	\item Operator: a user that is working for, and subscribed by, the system.
-\end{itemize}
+A support team is provided by an external service in case of incidents, car failures and other cases of need.
 
 \subsection{Goals}
 The goals of the PowerEnJoy service are the following:
 \begin{itemize}
-	\item {[G1]} Allow a driver to rent a vehicle. 
+	\item {[G1]} Allow a driver to rent a car. 
 	\begin{itemize}
-		\item {[G1.1]} Allow a driver to search and reserve a vehicle. 
-		\item {[G1.2]} Allow a driver to use a reserved vehicle. 
-		\item {[G1.3]} Allow a driver to park a vehicle in a safe area, suggested by the system.
+		\item {[G1.1]} Allow a driver to search and reserve a car. 
+		\item {[G1.2]} Allow a driver to use a reserved car. 
+		\item {[G1.3]} Allow a driver to park a car in a safe area, suggested by the system.
 	\end{itemize} 
 	\item {[G2]} Allow a guest to sign up to the system. 
 	\item {[G3]} Motivate a driver into car pooling. 
-	\item {[G4]} Motivate a driver to a better behavior. 
-	\item {[G5]} Provide an efficient and fast assistance in case of problems to vehicles. 
+	\item {[G4]} Motivate a driver to a better behavior during the rent of a car. 
 \end{itemize}
 
 \subsection{Definitions, acronyms, and abbreviations}
@@ -46,16 +39,18 @@ The goals of the PowerEnJoy service are the following:
 	\item[RASD:] Requirements Analysis and Specification Document.
 	\item[System:] the whole software system to be developed, comprehensive of all its parts.
 	\item[Car pooling:] the sharing of car journeys so that more than one person travels in a car.
-	\item[User:] anyone recognized by the system. In this case drivers or operators.
-	\item[RDBMS:]
-	\item[API:]
-	\item[JVM:] 
+	\item[User:] anyone recognized by the system through credentials. In this case the only users of the system are drivers. 
+	\item[Driver:] a user of the car-sharing service.
+	\item[RDBMS:] Relational DataBase Management System.	
+	\item[API:] Application Programming Interface. A set of routines, protocols, and tools for building software applications
+	\item[JVM:] Java Virtual Machine. An abstract computing machine that enables a computer to run a Java program.
 \end{description}
 
 \subsection{References}
 This document refers to the project rules of the Software Engineering 2 project~\cite{se-project-rules} and to the RASD assignment~\cite{se-assignment}.
 
 This document follows the IEEE Standard 830-1998~\cite{ieee-830-1198} for the format of Software Requirements specifications.
+
 \subsection{Overview}
 This document is structured in three parts:
 \begin{description}
